# bisum

./: .gitignore  README.md  paper.bib  paper.md  pyproject.toml  setup.py
.github/workflows/: gh-ci.yaml
bisum/: generic_functions.py  labels.py  sparse_intra.py  tensordot.py  test_bisum.py
bisum/tests/: test_bisum.py  test_bisum2.py  test_bisum_outdated.py  test_dense_intra.py  test_generic.py  test_import.py  test_labels.py
src/: TESTS.py  ___dev_defs.py  ___directproduct.py  ___main.py  ___sparse_intra.py  __tests.py  _basicfunctions.py  _randomeinsumstring.py  adjmatrix_builder.py  bisum.py  dense_intratr.py  dev_defs.py  directintersection.py  directproduct.py  generic_functions.py  label_process_einsum.py  label_process_ncon.py  main.py  post_transpose.py  random_einsum_str.py  rowslice.py  slice.py  sparse_intra.py  sparse_reshaper.py  uniform_random_sparse_tensor.py  wellorder.py
